# CPE416_FinalProject

./: .gitignore  README.md
gobilda/: .gitmodules  README.md
gobilda/docker/: Dockerfile  Makefile
gobilda/env_scripts/: jetson_orin.sh  tigervnc_setup.sh  update_cmake.sh
gobilda/env_scripts/udev_files/: 99-pwm.rules  99-rplidar.rules
gobilda/gobilda_ws/: EKF.py  plot_ekf.py
gobilda/gobilda_ws/src/gobilda_robot/: CMakeLists.txt  package.xml
gobilda/gobilda_ws/src/gobilda_robot/bringup/config/: oakd.yaml
gobilda/gobilda_ws/src/gobilda_robot/bringup/launch/: gobilda.launch.py  gobilda_build_map.launch.py  gobilda_ekf_odom_viz.launch.py
gobilda/gobilda_ws/src/gobilda_robot/hardware/include/gobilda_robot/: gobilda_system.hpp
gobilda/gobilda_ws/src/gobilda_robot/hardware/src/: gobilda_system.cpp  motor.cpp
gobilda/gobilda_ws/src/gobilda_utilities/: setup.cfg
gobilda/gobilda_ws/src/lab4/lab4/: DWA.py  LocalCostmap.py  roomba.py
gobilda/gobilda_ws/src/lab4/launch/: roomba.launch.py
gobilda/jetson_gpio_sys/: diff_drive_kin.cpp  simple_pwm.cpp
gobilda_sim_finalproject/: Makefile  README.md
gobilda_sim_finalproject/reference/code_examples/diff_drive/: obstacle_detector.py  teleop_twist_keyboard.py
gobilda_sim_finalproject/reference/code_examples/pid_controller/: turtlesim_pid.py
gobilda_sim_finalproject/reference/code_examples/pub-sub/: publisher.py  subscriber.py
gobilda_sim_finalproject/reference/code_examples/turtlesim/: draw_square.py
gobilda_sim_finalproject/reference/code_examples/turtlesim/launch/: draw_square_launch.py
gobilda_sim_finalproject/ros_ws/src/lab4/: package.xml  setup.py
gobilda_sim_finalproject/ros_ws/src/lab4/lab4/: DWA.py  LocalCostmap.py  clearance_calculator.py  roomba.py
gobilda_sim_finalproject/ros_ws/src/ros_gz_project/: README.md
(+32 files in other folders)
