<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gobilda_robot</name>
  <version>1.0.0</version>
  <description>ROS2 Driver for the Gobilda Robot Setup: CPE416</description>
  <maintainer email="cdiazalv@calpoly.edu">cdiazalv</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Add build dependencies here ! -->
  <depend>backward_ros</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <exec_depend>foxglove_bridge</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>depthai-ros</exec_depend>
  <exec_depend>rtabmap_odom</exec_depend>
  <exec_depend>robot_localization</exec_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>turtlebot4_description</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_control_demo_description</exec_depend>
  <exec_depend>ros2_controllers_test_nodes</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
